# plugin-next-export-optimize-images

./: .editorconfig  .eslintignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  plugin_next_export_optimize_images.wasm  release.config.js
.github/actions/: rust_ci.yml
.github/workflows/: ci.yml  release.yml
identifier/: Cargo.toml
identifier/src/: lib.rs
identifier/tests/: fixture.rs
identifier/tests/fixtures/basic/: input.jsx  output.js
identifier/tests/fixtures/lagacy/: input.jsx  output.js
src/: lib.rs
tests/: fixture.rs
tests/fixtures/common/: input.jsx  output.js
tests/fixtures/no-next-image/: input.jsx  output.js
