[package]
name = "swc_plugin_next_export_optimize_images"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0.79"
swc_core = { version = "0.7.*", features = ["plugin_transform"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.

[dev-dependencies]
testing = "0.29.4"
swc_ecma_parser = "*"
