[package]
authors = ["dc7290"]
name = "next_image_identifiers"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_core = { features = [
  "ecma_ast",
  "ecma_visit",
  "ecma_plugin_transform"
], version = "0.75.34" }

[dev-dependencies]
swc_core = { features = [
  "testing_transform",
  "ecma_parser",
], version = "0.75.34" }
testing = "0.33.6"
